--- a/SeeVision.css
+++ b/SeeVision.css
@@ -24,7 +24,7 @@
 	--textdarker: 				125, 125, 125;
 	--textdarkest: 				90, 90, 90;
 	
-	--background:				url(https://images.alphacoders.com/632/632525.png);
+	--background:				url(https://funtoxic/SeeVision/_res/background.jpg);
 	--backgroundposition:			center;
 	--backgroundsize:			cover;
 	--backgroundblur:			0;
