--- a/SeeVision.css
+++ b/SeeVision.css
@@ -1,6 +1,6 @@
 :root {
   /* APP ELEMENTS */
-  --app-bg: url(https://i.imgur.com/bgmVeyt.jpg);
+  --app-bg: url(https://images.alphacoders.com/632/632525.png);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 10px;
